--- a/index.html
+++ b/index.html
@@ -2,50 +2,142 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>TSHLA.ai</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>TSHLA Engage</title>
+  <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&family=Pacifico&display=swap" rel="stylesheet">
   <style>
-    * { box-sizing: border-box; margin: 0; padding: 0; }
-    html, body {
-      height: 100%;
-      font-family: 'Inter', sans-serif;
-      background-color: white;
-      color: white;
-    }
-    .centered {
-      position: relative;
-      z-index: 1;
+    body {
+      margin: 0;
+      font-family: 'DM Sans', sans-serif;
+      background-color: #f9f9f9;
       display: flex;
       flex-direction: column;
-      justify-content: center;
       align-items: center;
-      min-height: 100vh;
-      padding: 2rem;
+      justify-content: center;
+      height: 100vh;
+      overflow: hidden;
+      animation: fadeIn 1s ease-in;
+    }
+
+    @keyframes fadeIn {
+      from { opacity: 0; }
+      to { opacity: 1; }
+    }
+
+    h1 {
+      font-family: 'Pacifico', cursive;
+      font-size: 3rem;
+      margin-bottom: 2.5rem;
+      font-weight: 400;
+      color: #ff6b6b;
+    }
+
+    .input-group {
+      display: flex;
+      flex-direction: column;
+      width: 300px;
+      gap: 2rem;
+      align-items: center;
+    }
+
+    .roles {
+      display: flex;
+      justify-content: space-between;
+      width: 100%;
+    }
+
+    .role-btn {
+      flex: 1;
+      text-align: center;
+      padding: 0.75rem 1rem;
+      border: 2px solid #bde0fe;
+      margin: 0 0.25rem;
+      border-radius: 9999px;
+      cursor: pointer;
+      font-weight: 600;
+      color: #0077b6;
+      background: #e0f7ff;
+      transition: all 0.3s;
+    }
+
+    .role-btn:hover {
+      background: #caf0f8;
+    }
+
+    .role-btn.selected {
+      background: #90e0ef;
+      border-color: #0077b6;
+      color: #03045e;
+    }
+
+    .code-input {
+      border: none;
+      border-bottom: 2px solid #ccc;
+      padding: 0.75rem 0;
+      font-size: 1rem;
+      width: 100%;
+      background: transparent;
+      transition: border-color 0.3s;
       text-align: center;
     }
-    h1 {
-      font-size: 2.2rem;
+
+    .code-input:focus {
+      outline: none;
+      border-color: #0077b6;
+    }
+
+    .engage-btn {
+      margin-top: 1rem;
+      padding: 0.75rem 1.5rem;
+      background-color: #0077b6;
+      color: white;
+      border: none;
+      border-radius: 9999px;
+      cursor: pointer;
+      font-size: 1rem;
       font-weight: 600;
-      margin-bottom: 2rem;
+      transition: transform 0.2s ease, box-shadow 0.2s ease, background-color 0.3s;
     }
-    a {
-      padding: 0.7rem 1.4rem;
-      background: white;
-      color: #284fa0;
-      text-decoration: none;
-      border-radius: 6px;
-      font-weight: 500;
-    }
-    a:hover {
-      background: #e0e0ff;
+
+    .engage-btn:hover {
+      transform: translateY(-2px);
+      background-color: #023e8a;
+      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
     }
   </style>
 </head>
 <body>
-  <div class="centered">
-    <h1>TSHLA</h1>
-    <a href="login.html">Login</a>
+  <h1>TSHLA</h1>
+  <div class="input-group">
+    <div class="roles">
+      <div class="role-btn selected" onclick="selectRole(this)">Driver</div>
+      <div class="role-btn" onclick="selectRole(this)">Passenger</div>
+    </div>
+
+    <input class="code-input" type="text" placeholder="Enter your Drive Code" />
+
+    <button class="engage-btn" onclick="handleEngage()">Engage →</button>
   </div>
+
+  <script>
+    function selectRole(element) {
+      document.querySelectorAll('.role-btn').forEach(btn => btn.classList.remove('selected'));
+      element.classList.add('selected');
+    }
+
+    function handleEngage() {
+      const selectedRoleElement = document.querySelector('.role-btn.selected');
+      if (!selectedRoleElement) return;
+      const selectedRole = selectedRoleElement.innerText.trim().toLowerCase();
+
+      if (selectedRole === 'driver') {
+        window.location.href = 'driver.html';
+      } else if (selectedRole === 'passenger') {
+        window.location.href = 'passenger.html';
+      } else {
+        alert('Please select a role');
+      }
+    }
+  </script>
 </body>
 </html>
